# pulsar-node

./: .gitignore  LICENSE  README.md
.github/workflows/: android-release.yml  bootstrap-updater-key.yml  desktop-release.yml  runner-publish.yml
android/: README.md  twa-manifest.json
desktop/: README.md  UPDATER_SETUP.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: lib.rs  main.rs  runner.rs  storage.rs
desktop/ui/: index.html
runner/: README.md  package.json  tsconfig.json
runner/src/: index.ts
scripts/: gen_updater_key.py  reencrypt_updater_key.py
