[package]
name = "pulsar-desktop"
version = "0.1.20"
description = "Pulsar Desktop — relay node + chat client"
edition = "2021"
authors = ["Pulsar Team"]
license = "MIT"

[lib]
name = "pulsar_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Runner: ws pubsub + HTTP proof submission
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = "s"   # smaller binary
lto = true
strip = true
panic = "abort"
codegen-units = 1
